--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Circle Packing Issues</title>
     <script src="https://d3js.org/d3.v6.js"></script>
+    <script src="https://www.unpkg.com/papaparse@5.3.0/papaparse.js"></script>
     <script src="/index.js"></script>
 </head>
 
