--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="utf-8"/>
     <title>Circle Packing Issues</title>
     <script src="https://d3js.org/d3.v6.js"></script>
     <script src="https://www.unpkg.com/papaparse@5.3.0/papaparse.js"></script>
