--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8"/>
     <title>Circle Packing Issues</title>
-    <script src="https://d3js.org/d3.v6.js"></script>
     <script src="https://www.unpkg.com/papaparse@5.3.0/papaparse.js"></script>
+    <script src="d3.js"></script>
     <script src="index.js"></script>
 </head>
 
