--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Circle Packing Issues</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
     <script src="https://www.unpkg.com/papaparse@5.3.0/papaparse.js"></script>
     <script src="d3.js"></script>
     <script src="index.js"></script>
@@ -11,6 +12,7 @@
 
 <body>
 
+    <input type="file" id="input">
     <div id="chart">Chart should be here</div>
 
 </body>
