Added file picker

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="index.js"></script>
 </head>
 
-<body>
+<body onload="main()"> 
 
     <input type="file" id="input">
     <div id="chart">Chart should be here</div>
