--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"/>
     <title>Circle Packing Issues</title>
     <script src="https://www.unpkg.com/papaparse@5.3.0/papaparse.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dat.gui@0.7.7/build/dat.gui.min.js"></script>
     <script src="d3.js"></script>
     <script src="index.js"></script>
 </head>
