--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <script src="index.js"></script>
 </head>
 
-<body onload="main()"> 
-
-    <input type="file" id="input">
+<body onload="main()" style="width:100%; text-align: center;"> 
     <div id="chart">Chart should be here</div>
+    <input type="file" id="input">
 
 </body>
 
