--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script src="index.js"></script>
 </head>
 
-<body onload="main()" style="width:100%; text-align: center;"> 
-    <div id="chart">Chart should be here</div>
+<body onload="main()" text-align: center;"> 
+    <div id="chart" style="width:100%; height:100%;">Chart should be here</div>
     <input type="file" id="input">
 
 </body>
